# freelance-2026

./: .antigravity_disk.conf  .credentials_vezemcip.md  .gitignore  .gitmodules  ACTIVE_TASKS.md  AGENTS.md  AGENT_EVOLUTION_ROADMAP.md  AGENT_SKILL_ROADMAP.md  AGENT_SYSTEM_PROMPT.md  DOOMSDAY_PROTOCOL.md  GEMINI.md  GOOGLE_AI_TRENDS_2026_DIGEST.md  MASTER_BACKLOG.md  PLAN.md  PROJECT_CONTEXT.md  SECRETS_ROTATION.md  SESSION_CHECKPOINT.md  SESSION_LATEST.md  STRATEGY_2026.md  check_server_tmp.exp  chp.md  cleanup.sh  deploy_cloud.sh  ecosystem.config.cjs  final_start.exp  gen_and_upload_tts.py  get_daily_report_v3.py  get_stats.py  install_ssl.exp  llms.txt  mango_api.py  opencode.json  package-lock.json  package.json  Реферат_Государственная_политика.html  скачать_карточку.html
projects/levitan/: .gitignore  AGENTS.md  PROJECT.md  README.md  SESSION_SUMMARY_2026-07-08.md  STATUS.md  chp.md  main.py  pyproject.toml  requirements.txt  test_all.py
projects/levitan/agent/: main.py
projects/levitan/checkpoints/: chp_20260708_0030.md  chp_20260709_0950.md  chp_20260709_1006.md  chp_20260717_2037.md  chp_20260721_1235.md
projects/levitan/config/: .env.example  agents.yaml  retell-agent.yaml
projects/levitan/crm/: app.py  crm.db  database.py
projects/levitan/data/: knowledge_base.json  turkey_july24_contacts.json  turkey_not_called.csv
projects/levitan/deploy/: deploy_angel.sh  deploy_webhook.sh  levitan_dialog.py  levitan_faq_agent.py  levitan_greeting.py  levitan_realtime.py  levitan_realtime_prompt.py  levitan_turnbased.py  levitan_webhook.py  test_angel_local.py
(+1191 files in other folders)
