[project]
name = "levitan"
version = "0.1.0"
description = "Levitan - Голосовой агент для обзвона сельхозпроизводителей"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
